--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,3 +1,9 @@
+gaurav:
+  name: Gaurav Marsoniya
+  title: Software Engineer
+  url: https://github.com/gauravmarsoniya
+  image_url: https://github.com/gauravmarsoniya.png
+
 endi:
   name: Endilie Yacop Sucipto
   title: Maintainer of Docusaurus
